# PuzzlesSolver

./: README.md
Games/Pattern/: _solve.py  test.py
Games/Signpost/: __init__.py  _solve.py  _test_maps.py  smallBoardGenerator.htm  test.py
Games/Undead/: _solve.py  test.py
Games/Unruly/: _solve.py  test.py
Pattern/: Block.cpp  Block.h  Board.cpp  Board.h  CMakeLists.txt  Doxyfile  Solve.cpp  Solve.h  Type.cpp
Pattern/doc/: Doxyfile  main.dox
Pattern/test/: BlockTest.cpp  BoardTest.cpp  CMakeLists.txt  SolveTest.cpp
Undead/: Block.cpp  Board.cpp  Board.h  CMakeLists.txt  Direction.cpp  Solve.cpp  Solve.h  Type.cpp  main.cpp
Undead/test/: BlockTest.cpp  BoardTest.cpp  CMakeLists.txt  SolveTest.cpp  main.cpp
